--- a/force-app/main/default/classes/MassUploadProcessAttachmentBatchHelper.cls
+++ b/force-app/main/default/classes/MassUploadProcessAttachmentBatchHelper.cls
@@ -7,19 +7,6 @@ public class MassUploadProcessAttachmentBatchHelper {
         List<SObject> sObjects=new List<SObject>();
         String header = rows.remove(0);
         List<String> headers = header.split(massupload.Seperator__c);
-       // System.debug('header size'+headers.size());
-       /* if(Integer.valueof(headers.size()) < 2)
-            
-        {
-            System.debug('inside if');
-            massupload.Comments__c='File is Empty or Invalid File Separator';
-            massupload.Status__c='Rejected';
-        } 
-        */
-        
-       // System.debug('data from class==>'+rows.size());
-        
-        // Key:ObjectName,Value:externalIdField
         Map<String,String> mapExternalIdField = new Map<String,String>();
         Map<String,List<String>> mapCombinationFields = new Map<String,List<String>>();
         List<MassUploadExternalIdRecords__c> massUploadExternalIdRecords = [select Id,Name,DataType__c,ExternalId__c,ObjectName__c,FieldUseInCombinationKey__c,isRecordType__c,Type__c,CSVFields__c,TypeApiName__c,Length__c from MassUploadExternalIdRecords__c];
@@ -27,7 +14,7 @@ public class MassUploadProcessAttachmentBatchHelper {
         Map<String,MassUploadExternalIdRecords__c> mapMassUploadExt = new Map<String,MassUploadExternalIdRecords__c>();
         Map<String,List<String>> csvFieldsMap = new Map<String,List<String>>();
         Map<String,Integer> mapLeftpad = new Map<String,Integer>();
-       // System.debug('massUploadExternalIdRecords size '+massUploadExternalIdRecords.size());
+       System.debug('massUploadExternalIdRecords size '+massUploadExternalIdRecords.size());
         for(MassUploadExternalIdRecords__c tempMassExternal:massUploadExternalIdRecords){
             mapExternalIdField.put(tempMassExternal.Name,tempMassExternal.ExternalId__c);
             if(!String.isEmpty(tempMassExternal.FieldUseInCombinationKey__c)){
@@ -39,15 +26,15 @@ public class MassUploadProcessAttachmentBatchHelper {
             mapObjectName.put(tempMassExternal.Name,tempMassExternal);
             if(!String.isEmpty(tempMassExternal.Type__c)){
             	mapMassUploadExt.put(tempMassExternal.ObjectName__c+tempMassExternal.Type__c,tempMassExternal);  
-               // System.debug('mapMassUploadExt Key'+tempMassExternal.ObjectName__c+tempMassExternal.Type__c);
+               System.debug('mapMassUploadExt Key'+tempMassExternal.ObjectName__c+tempMassExternal.Type__c);
             }else{
                 mapMassUploadExt.put(tempMassExternal.ObjectName__c+'',tempMassExternal);  
-               // System.debug('mapMassUploadExt Key'+tempMassExternal.ObjectName__c+'');
+               System.debug('mapMassUploadExt Key'+tempMassExternal.ObjectName__c+'');
             }
             
-           // System.debug('tempMassExternal.CSVFields__c '+tempMassExternal.CSVFields__c);
+           System.debug('tempMassExternal.CSVFields__c '+tempMassExternal.CSVFields__c);
             if(!String.isEmpty(tempMassExternal.CSVFields__c)){
-              //  System.debug('IN IF tempMassExternal.CSVFields__c '+tempMassExternal.CSVFields__c);
+               System.debug('IN IF tempMassExternal.CSVFields__c '+tempMassExternal.CSVFields__c);
             	csvFieldsMap.put(tempMassExternal.Type__c,tempMassExternal.CSVFields__c.split(';'));
             }
         }
@@ -55,15 +42,15 @@ public class MassUploadProcessAttachmentBatchHelper {
 		Schema.SObjectType t = Schema.getGlobalDescribe().get(sObjectTypeApi);
         Map<String, SObjectField> fieldsMap = t.getDescribe().fields.getMap();
         List<String> csvFields = csvFieldsMap.get(massupload.File_Type__c);
-       // System.debug('csvFields size'+csvFields.size());
-        //System.debug('csvFields '+csvFields);
+       System.debug('csvFields size'+csvFields.size());
+        System.debug('csvFields '+csvFields);
         
         String ObjectcombinationKeyValue = '';
         String ObjectcombinationExternalId = '';
         SObjectField ObjectcombinationExternalIdField = null;
         List<String> ObjectcombinationKeyFields = new List<String>();
             //if(mapMassUploadExt.get(sObjectTypeApi)!=null){
-               // System.debug('Key :'+sObjectTypeApi+massupload.File_Type__c);
+               System.debug('Key :'+sObjectTypeApi+massupload.File_Type__c);
                 if(!String.isEmpty(massupload.File_Type__c)){
                     ObjectcombinationKeyFields = mapMassUploadExt.get(sObjectTypeApi+massupload.File_Type__c).FieldUseInCombinationKey__c.split(';');
                 	ObjectcombinationExternalId  = mapMassUploadExt.get(sObjectTypeApi+massupload.File_Type__c).ExternalId__c;
@@ -73,27 +60,33 @@ public class MassUploadProcessAttachmentBatchHelper {
                 }
                 ObjectcombinationExternalIdField = fieldsMap.get(ObjectcombinationExternalId);
             //}
-        //System.debug('ObjectcombinationKeyFields size'+ObjectcombinationKeyFields.size()); 
-      //  for(String combinationFields :ObjectcombinationKeyFields){
-        	  // System.debug('combinationFields '+combinationFields);
-        //}
         
+        SObject obj;
+        List<String> record;
+        String value='';
+        String tempRecord='';
         for(String lineItem: rows){
-            SObject obj= t.newSObject();
+            obj= t.newSObject();
             ObjectcombinationKeyValue = '';
-            List<String> record = lineItem.split(massupload.Seperator__c); 
+            record = lineItem.split(massupload.Seperator__c); 
             if(record.size()>1)
             {
-             // System.debug('reocrd is'+record +'recordsize'+record.size()); 
-            
-			String tempRecord='';			  
-            for(Integer j=0;j<=csvFields.size()-1;j++){
-            System.debug('For loop j is'+csvFields[j]);    
-            for(Integer i=0;i<=record.size()-1;i++){
-            System.debug('For loop i is'+record[i]);   
-                if(i==j && !String.isBlank(record[i])){
-                    //System.debug('record '+record[i]);
-                   
+             System.debug('reocrd is'+record +'recordsize'+record.size()); 
+                for(Integer j=0;j<=csvFields.size()-1;j++){
+                System.debug('For loop j is'+csvFields[j]);  
+                System.debug('For loop i is'+record[j]);  
+
+                if(ObjectcombinationKeyFields.contains(csvFields[j])){
+                    value = record[j];
+                    if(mapLeftpad.get(csvFields[j]) != null)
+                    {
+                        ObjectcombinationKeyValue = ObjectcombinationKeyValue+value.leftpad(mapLeftpad.get(csvFields[j]), '0');
+                    }else{
+                        ObjectcombinationKeyValue = ObjectcombinationKeyValue+value;
+                    }
+                    System.debug('Combination Key value '+ObjectcombinationKeyValue);
+                }
+
                     if(csvFields[j].contains('__r')){
                         //System.debug('Error attempt'+mapObjectName.get(csvFields[j]).ObjectName__c);
                         String sObjectTypeLookup = mapObjectName.get(csvFields[j]).ObjectName__c;
@@ -102,25 +95,22 @@ public class MassUploadProcessAttachmentBatchHelper {
                         String key='';
                        // System.debug('mapcombination is');
                         List<String> filedMapping = mapCombinationFields.get(csvFields[j]);
-                        // System.debug('csvFields[j] '+csvFields[j]);
-                       // System.debug('fieldMapping'+mapCombinationFields);
-                       // for(String key11:mapCombinationFields.keySet())
-                      //  {
-                            //System.debug('key11'+key11);
-                       // }
+                        System.debug('csvFields[j] '+csvFields[j]);
+                       System.debug('fieldMapping'+mapCombinationFields);
+                       
                         if(filedMapping.size()>=1){
-                            //System.debug('for loop for filed mapping');
+                            System.debug('for loop for filed mapping');
                             for(String tempFields:filedMapping){
                                 System.debug('For loop for tempfields'+tempFields);
                                 if(!String.isEmpty(tempFields)){
-                                   // System.debug('temp field is--'+tempFields);
+                                   System.debug('temp field is--'+tempFields);
                                     tempRecord=record[csvFields.indexOf(tempFields)];
-                                   // System.debug('temprecord'+tempRecord);
+                                   System.debug('temprecord'+tempRecord);
 									if(mapLeftpad.get(tempFields) != null){
 									 tempRecord=record[csvFields.indexOf(tempFields)].leftPad(mapLeftpad.get(tempFields), '0');
-									// System.debug('temprecord1'+tempRecord);
+									System.debug('temprecord1'+tempRecord);
 									  
-                                       // System.debug('key1'+key);
+                                       System.debug('key1'+key);
                                     }
                                     key = key+tempRecord;
                                     
@@ -128,77 +118,47 @@ public class MassUploadProcessAttachmentBatchHelper {
                             }
                         
                         }else{
-                            key = record[i];
+                            key = record[j];
                         }
                         lookupObj.put(mapExternalIdField.get(csvFields[j]),key);
-                        //System.debug('lookupObj Obj'+lookupObj);
+                        System.debug('lookupObj Obj'+lookupObj);
                         obj.putSObject(csvFields[j],lookupObj);
-                        //System.debug('Obj putSObject'+obj);
+                        System.debug('Obj putSObject'+obj);
                     }
                     else{
                         
-                       // System.debug('For DATA TYPE '+csvFields[j]);
+                       System.debug('For DATA TYPE '+record[j]);
                         if(mapObjectName.get(csvFields[j]) !=null )
                         {
                         String fieldDataType = mapObjectName.get(csvFields[j]).DataType__c;
                         
                         if(fieldDataType=='Number'){
-                            Decimal value = Decimal.valueOf(record[i].deleteWhiteSpace());
-                        	obj.put(csvFields[j], value);    
+                            try{
+                                Decimal value1 = Decimal.valueOf(record[j].deleteWhiteSpace());
+                                obj.put(csvFields[j], value1);    
+                            }catch(Exception e){
+                                System.debug('Decimal Exception '+e);
+                            }
                         }
                         if(fieldDataType=='Text'){
-                        	obj.put(csvFields[j], record[i]);    
+                        	obj.put(csvFields[j], record[j]);    
                         }
                         if(fieldDataType=='Date'){
-							String Date1 = record[i];
+							String Date1 = record[j];
                           //  System.debug('Date '+Date1+'Length '+Date1.length());
-                            //System.debug('Year '+Integer.valueOf(record[i].subString(4,8))+' Month '+Integer.valueOf(record[i].subString(2,4))+' Day '+Integer.valueOf(record[i].subString(0,2)));
-							Date d = Date.newInstance(Integer.valueOf(record[i].subString(4,8)),Integer.valueOf(record[i].subString(2,4)), Integer.valueOf(record[i].subString(0,2)));                           
+                            //System.debug('Year '+Integer.valueOf(record[j].subString(4,8))+' Month '+Integer.valueOf(record[j].subString(2,4))+' Day '+Integer.valueOf(record[j].subString(0,2)));
+							Date d = Date.newInstance(Integer.valueOf(record[j].subString(4,8)),Integer.valueOf(record[j].subString(2,4)), Integer.valueOf(record[j].subString(0,2)));                           
                         	//System.debug('The date is'+d);
                             obj.put(csvFields[j], d);    
                         }
                         }
                         
-                        
                     }
-                    String value = '';
-                    for(String objectKeyFields:ObjectcombinationKeyFields){
-                        System.debug('objectKeyFields '+objectKeyFields +' record[j] '+record[j]);
-                        //System.debug('objectKeyFields headers'+csvFields);
-                        //System.debug('objectKeyFields headers '+csvFields.indexOf(objectKeyFields));
-                        Integer  index = csvFields.indexOf(objectKeyFields);
-                        if(index!=-1){
-                            value = record[index];
-                        }else{
-                            value = null;
-                        }
-                        
-                       if(!String.isEmpty(objectKeyFields) && index==j){
-                            
-                          // System.debug('Combination Key Field Name --'+objectKeyFields);
-                          // System.debug('Combination Key index'+csvFields.indexOf(objectKeyFields));   
-                          // System.debug('Combination Key record '+value);
-                          // System.debug('Combination Key J Index '+record[j]);
-                          // System.debug('Combination Key ObjectcombinationKeyValue '+ObjectcombinationKeyValue.length());
-                          // System.debug('Combination Key value Length '+value.length());
-                        
-                           if(mapLeftpad.get(objectKeyFields) != null)
-                           {
-                               ObjectcombinationKeyValue = ObjectcombinationKeyValue+value.leftpad(mapLeftpad.get(objectKeyFields), '0');
-                           }
-                           else
-                           {
-                            ObjectcombinationKeyValue = ObjectcombinationKeyValue+value;
-                           }
-                          // System.debug('Combination Key value '+ObjectcombinationKeyValue);
-                       }
                     
-                    }
                 }
-               // System.debug('------------------------------END OF COLUMNS-----------------------------------');
+               System.debug('------------------------------END OF COLUMNS-----------------------------------');
             }
-            }
-            //System.debug('------------------------------END OF RECORD-----------------------------------');
+            System.debug('------------------------------END OF RECORD-----------------------------------');
                 if(!String.isEmpty(massupload.File_Type__c)){    
                     if(mapMassUploadExt.get(massupload.Object_Name__c+massupload.File_Type__c).TypeApiName__c!=null){    
                         obj.put(mapMassUploadExt.get(massupload.Object_Name__c+massupload.File_Type__c).TypeApiName__c,massupload.File_Type__c);
@@ -211,25 +171,24 @@ public class MassUploadProcessAttachmentBatchHelper {
                     }
                 }
             obj.put(ObjectcombinationExternalId, ObjectcombinationKeyValue);
-           // System.debug('obj '+obj);
-            //System.debug('obj Key'+String.valueOf(obj.get('Combination_Key__c')).length());
+           System.debug('obj '+obj);
+            System.debug('obj Key'+String.valueOf(obj.get('Combination_Key__c')).length());
             sObjects.add(obj);
-            }
         }
-       // System.debug('object '+sObjects.size());
+       System.debug('object '+sObjects.size());
         Database.UpsertResult [] cr =  Database.upsert(sObjects,ObjectcombinationExternalIdField,false);
-        //System.debug('CR '+cr);
+        System.debug('CR '+cr);
         
         
         updateLogs(cr,massupload);
         }
         catch(Exception e)
         {   
-          //  System.debug('Inside Exception log'+e);
-          //  System.debug('Inside Exception log'+e.getMessage());
+           System.debug('Inside Exception log'+e);
+           System.debug('Inside Exception log'+e.getMessage());
             massupload.Comments__c=e.getMessage();
             massupload.Status__c='Rejected';
-            update massupload;
+            // update massupload;
             
         }
               
@@ -302,7 +261,7 @@ public class MassUploadProcessAttachmentBatchHelper {
              
         // System.debug('massupload'+massupload);       
          massupload.Status__c='Completed';
-         update massupload;
+        //  update massupload;
         
     }
    
